--- a/Examen/Examen2.html
+++ b/Examen/Examen2.html
@@ -1,3 +1,4 @@
+</html>
 <html>
 <head>
 <style>
@@ -22,6 +23,9 @@ img {
     width: 300px;
   height: 200px;
 }
+html {
+  background-color: palegoldenrod;
+}
 </style>
 </head>
 <body>
@@ -40,8 +44,8 @@ img {
 <p>Uluru, también conocido como Ayers Rock, es una enorme formación rocosa situada en el centro de Australia, dentro del Parque Nacional Uluru-Kata Tjuta. Uluru tiene unos 350 metros de altura y unos 9 kilómetros de circunferencia, y es famoso por su color rojo intenso que cambia según la hora del día y la estación del año. Uluru es un lugar sagrado para los aborígenes australianos, que lo consideran el centro espiritual del país.</p>
 <img src="img/Uluru.jpg" alt="Uluru">
 <h2>Los Doce Apóstoles</h2>
-<img src="img/doce-apostoles.jpg" alt="los 12 apostoles">
 <p>En el Parque Nacional de Port Campbell (en el estado de Victoria) se encuentran golpeadas por el mar estas formaciones rocosas de caliza. Ahora sólo quedan 10 de los doce “apóstoles”, pero sigue siendo impresionante observar lo que la fuerza de las olas puede llegar a hacer. Además, podrás hacer unas fotos impresionantes, sobre todo si estás por allí a primera hora de la mañana y a última de la tarde.</p>
+<img src="img/doce-apostoles.jpg" alt="los 12 apostoles">
 <h2>The Pinnacles</h2>
 <img src="img/the-pinnacles.jpg" alt="">
 <p> Son unas formaciones que se encuentran en el Parque Nacional de Nambung, a 200 km al norte de Perth. La imagen es muy curiosa porque emergen un montón de montículos de forma espontánea de la arena, en plan “aquí hemos decidido salir y de aquí no nos mueven”. Otra vez es un ejemplo de cómo la naturaleza es la mejor arquitecta que nos podemos imaginar.
