--- a/Examen/Examen2.html
+++ b/Examen/Examen2.html
@@ -2,16 +2,34 @@
 <html>
 <head>
 <style>
+ img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+/* Estilo del botón  */
+#img-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+/* Estilo del botón */
+#img-button {
+  position: fixed;
+  bottom: 90px;
+  right: 20px;
+}
 h1 {
   color: rgb(255, 55, 0);
   font-family: Snap Itc;
-  text-align: center;
-}
+  text-align: center;}
 
 h2 {
   color: aqua;
   font-family: Verdana;
-  text-align: left;
+  text-align: left ;
 }
 
 p {
